master
- Mayhem
  Add /int/ archive redirection for threads, and post resurrection.

2.37.6
- Mayhem
  Fix image expanding.

2.37.5
- Mayhem
  Fix quoting inside inlined backlinks.

2.37.4
- James Campos
  Don't expand pdfs
- Mayhem
  Add /po/ archive redirection for threads, images and post resurrection.
  Fix quoting.

2.37.3
- Mayhem
  Fix successful posting causing errors.
  Fix 4chan X trying to interact with >>>/board/rules links.

2.37.2
- aeosynth
  Beep on new post to completely read thread
- Mayhem
  Fix dead quotes.

2.37.1
- noface
  Fix Anonymize not working on stubs.
- Mayhem
  Fix selection quoting on Opera.
  Fix history bug with Persistent QR enabled on Chrome.
  Fix posting warning not displaying the reason.
  Fix deadquotes showing up in code-tags.

2.37.0
- noface
  Add Catalog Links toggle.
  Fix Anonymize not working on hovered posts.
- Mayhem
  Added catalog support.
  Sync thread hiding between index and catalog.
  Add /c/ archived thread and image redirection.

2.36.3
- Mayhem
  Fix next/previous page keybinds.

2.36.2
- noface
  Add tags support on /f/.
- Mayhem
  Add /mu/ archived image redirection.

2.36.1
- noface
  The Menu now has search links for Archivers.
- Mayhem
  Added possibility to display unix timestamps with File Info Formatting.

2.36.0
- Mayhem
  Added thread creation QR cooldown.
  Fix QR cooldown timer between non-sage and sage posts. You can submit a non-sage post 30 seconds after a sage one.
  Fix /q/ QR cooldowns for image and sage posts.

2.35.4
- Mayhem
  Removed the obnoxious 4chan Pass ad in captcha errors when posting.
  Fix 'Administrator/Moderator/Developer Replies' creating extra backlinks on /q/, again.

2.35.3
- Mayhem
  Larger Comment text input by default for 4chan Pass users and on /f/ (no captcha).

2.35.2
- Mayhem
  Fix 4chan Pass with QR on Firefox.

2.35.1
- Mayhem
  Add support for 4chan Pass.
  You can now use 'Enter' in keybind combinations.

2.35.0
- Mayhem
  Use 4chan's API to fetch posts for: