@@ -1,6 +1,8 @@
 master
 - Mayhem
   Add /int/ archive redirection for threads, and post resurrection.
+- Queue
+  Add relative time ("35 seconds ago") date formatting option.
 
 2.37.6
 - Mayhem
